mitglieder/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Anmerkungen__c</fullName>
        <label>Anmerkungen</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anrede__c</fullName>
        <label>Anrede</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Anrede</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIC__c</fullName>
        <inlineHelpText>https://www.iban.de/bic.html</inlineHelpText>
        <label>BIC</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankleitzahl__c</fullName>
        <inlineHelpText>alt</inlineHelpText>
        <label>Bankleitzahl (alt)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankname__c</fullName>
        <label>Bankname</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einladung_Mitgliederversammlung__c</fullName>
        <defaultValue>false</defaultValue>
        <description>YES - Einladung senden</description>
        <inlineHelpText>YES - Einladung senden</inlineHelpText>
        <label>Einladung Mitgliederversammlung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_3__c</fullName>
        <label>Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ist_Mitglied__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>aus dem Excel ... muss mit dem calculated field zusammen passen</inlineHelpText>
        <label>Ist Mitglied (Imported)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kontonummer__c</fullName>
        <inlineHelpText>alt - Readonly</inlineHelpText>
        <label>Kontonummer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_2017__c</fullName>
        <description>Changelog by Barnabas Toth</description>
        <label>Log 2017</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandatsreferenz__c</fullName>
        <description>271120142121/418</description>
        <inlineHelpText>&quot;271120142121/&quot; + Mitgliedsnummer</inlineHelpText>
        <label>Mandatsreferenz</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MigrationID__c</fullName>
        <description>lower(email)+&quot;|&quot;+lower(lastname)</description>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mitglied_seit__c</fullName>
        <label>Mitglied seit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mitglieds_Beitrag__c</fullName>
        <label>Mitglieds-Beitrag</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mitgliedschaft_Ende__c</fullName>
        <label>Mitgliedschaft Ende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mitgliedsnummer__c</fullName>
        <externalId>true</externalId>
        <label>Mitgliedsnummer</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mitgliedsstatus__c</fullName>
        <description>Mitgliedsstatus basierend auf Eintritt/Austritt</description>
        <formula>CASE( 1
    ,IF (((Mitglied_seit__c &lt;  TODAY()) &amp;&amp; (ISNULL(Mitgliedschaft_Ende__c))), 1,0 ) , &quot;Aktiv&quot; 
    ,IF ((Mitglied_seit__c &lt;  TODAY()) &amp;&amp; (Mitgliedschaft_Ende__c &gt; TODAY()), 1,0 ), &quot;Gekündigt&quot; 
    ,IF ((Mitglied_seit__c &lt;  TODAY()) &amp;&amp; (Mitgliedschaft_Ende__c &lt; TODAY()), 1,0 ), &quot;Inaktiv&quot;
    , &quot;unklar&quot;
)</formula>
        <label>Mitgliedsstatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mitgliedstyp__c</fullName>
        <label>Mitgliedstyp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MitgliederRolle</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schul_Rolle__c</fullName>
        <label>Schul Rolle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SchulMitarbeiter</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spendenbescheinigung__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spendenbescheinigung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefon_migrated__c</fullName>
        <inlineHelpText>nur für migration zwecke</inlineHelpText>
        <label>Telefon - migrated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vorstands_Rolle__c</fullName>
        <label>Vorstands Rolle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Vorstand</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>Mitgliedstyp__c</columns>
        <columns>Vorstands_Rolle__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Nur_Mitglieder</fullName>
        <columns>Mitgliedstyp__c</columns>
        <columns>Vorstands_Rolle__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mitgliedstyp__c</field>
            <operation>equals</operation>
            <value>Mitglied,Vorstand,erweiterter Vorstand,Ehrenmitglied</value>
        </filters>
        <label>Nur Mitglieder</label>
    </listViews>
    <listViews>
        <fullName>Vorstands</fullName>
        <columns>Mitgliedstyp__c</columns>
        <columns>Vorstands_Rolle__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Vorstand</value>
        </filters>
        <label>Vorstands</label>
    </listViews>
    <recordTypes>
        <fullName>Andere</fullName>
        <active>true</active>
        <label>Andere</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mitglied</fullName>
        <active>true</active>
        <label>Mitglied</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>